src/objects/Visiting_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visiting Reports</relationshipLabel>
        <relationshipName>Visiting_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agenda</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visiting Reports</relationshipLabel>
        <relationshipName>Visiting_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discussed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discussed</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Visiting Reports</relationshipLabel>
        <relationshipName>Visiting_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome_Follow_up_Points__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome / Follow-up Points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visiting_Report_Number__c</fullName>
        <displayFormat>VR-{0000000}</displayFormat>
        <label>Visiting Report Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Visiting Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Visiting Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visiting Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>